--- a/requirements.txt
+++ b/requirements.txt
@@ -61,6 +61,7 @@ pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pydantic==2.11.3
 pydantic_core==2.33.1
+pymoo
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
